--- a/src/app/dialogs/tiles/tiles.component.css
+++ b/src/app/dialogs/tiles/tiles.component.css
@@ -48,10 +48,38 @@ table {
   /* animation: pulse-green 2s infinite; */
 }
 
+.blob.yellow {
+  background: rgb(238, 241, 23);
+  box-shadow: 0 0 0 0 rgb(227, 243, 8);
+  animation: pulse-yellow 2s infinite; 
+}
+
+.blob.grey {
+  background: rgb(198, 207, 207);
+  box-shadow: 0 0 0 0 rgb(153, 153, 149);
+  /* animation: pulse-green 2s infinite; */
+}
+
 @keyframes pulse-red {
   0% {
     transform: scale(0.95);
     box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
+  }
+  
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+  }
+  
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+  }
+}
+@keyframes pulse-yellow {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 240, 34, 0.986);
   }
   
   70% {
