--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -69,6 +69,50 @@
   
   
   </mat-tab>
+  <mat-tab label="Status">
+    <h3>Updated: {{weatherUpdated}} </h3> 
+    <table mat-table [dataSource]="status" class="mat-elevation-z8 " >
+
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+    
+      <!-- Position Column -->
+
+      
+      
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Definisjon </th>
+        <td  mat-cell *matCellDef="let element"> 
+          
+          <span *ngIf="!configToggle; else editPlace">
+            {{element.name}} 
+            </span>
+
+          <ng-template #editPlace>
+            <input [(ngModel)]="element.name" (keyup.enter)="configToggle = false" >
+          </ng-template>
+        </td>
+      </ng-container>
+    
+      <!-- Name Column -->
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> status </th>
+        <td mat-cell *matCellDef="let element" > <div *ngIf="checkString(element.value)"  class="blob yellow" ></div> 
+        <div *ngIf="!checkString(element.value)" class="blob grey"></div>
+        
+        </td>
+      </ng-container>
+    
+ 
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
+    </table>  
+  
+  
+  
+  
+  </mat-tab>
 
   <mat-tab label="Data">
     <h3>Updated:{{weatherUpdated}} </h3> 
@@ -89,6 +133,8 @@
 
 
   </mat-tab>
+
+
 
 </mat-tab-group>
 </mat-dialog-content>
