--- a/src/app/components/minicard/minicard.component.html
+++ b/src/app/components/minicard/minicard.component.html
@@ -5,8 +5,11 @@
             <h1 class="value-text">{{value}}</h1>
             <h3 class="unit"> {{unit}}  </h3>
         </mat-card-title>
+        <h1 *ngIf="isRotated" class="value-text">{{direction}}</h1>
+
         <div mat-card-avatar class="card-icon">
-            <mat-icon [color]="color" class="avatar-icon">{{icon}}</mat-icon>
+            <mat-icon  [color]="color" class="avatar-icon">{{icon}}</mat-icon>
+            
         </div>
     </mat-card-header>
     <h3 class="title-text">{{title}}</h3>
