--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -1,9 +1,12 @@
 <h1 mat-dialog-title> {{this.name.name}}</h1>
+<mat-spinner *ngIf="!isWaiting" class="spinner"></mat-spinner>
 
 <mat-dialog-content>
   <button *ngIf="checkGroup()"  mat-button (click)="config()" ><mat-icon aria-hidden="false" aria-label="Example home icon">settings</mat-icon></button>
   
  <mat-tab-group >
+
+  
   <mat-tab label="Værdata"> 
     <h3>Updated:{{weatherUpdated}} </h3> 
     <div class="grid-container">
@@ -131,10 +134,10 @@
      </div>  
 
 
-
+     
   </mat-tab>
 
-
+  
 
 </mat-tab-group>
 </mat-dialog-content>
