--- a/src/app/components/map-page/map-page.component.html
+++ b/src/app/components/map-page/map-page.component.html
@@ -8,7 +8,7 @@
     </mat-form-field>
   </form> -->
   
-  <app-map  (map$)="receiveMap($event)" (zoom$)="receiveZoom($event)" >
+  <app-map  (map$)="receiveMap($event)" (zoom$)="receiveZoom($event)" (cluster$)="recieveCluster($event)" >
 
     
   </app-map>
