--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -7,4 +7,7 @@
   (leafletClick) ="onClick($event)"
   (locationfound)="onLocationFound($event)"
   (locationerror)="onLocationError($event)"
+  [leafletMarkerCluster]="markerClusterData"
+  (leafletMarkerClusterReady)="markerClusterReady($event)"
+    
 ></div>
