--- a/src/app/components/gauge/gauge.component.html
+++ b/src/app/components/gauge/gauge.component.html
@@ -1,1 +1,8 @@
-<p>gauge works!</p>
+<ngx-gauge [type]="type" 
+           [value]="value" 
+           [label]="label"  
+           [append]="unit"
+           [min] ="min"
+           [max]="max"
+           >
+</ngx-gauge>
