--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -17,6 +17,11 @@
           [rowspan]="( cardLayout | async )?.miniCard?.rows">
           <app-minicard  (click)='!(i.name === "Temperatur")  || openChart(i.name)' [unit]="i.unit" [icon]="i.icon" [title]="i.name" [color]="'green'" [value]=i.value [isRotated]="(i.name === 'Vindretning')"><div>Mini Card Content Here</div></app-minicard>
         </mat-grid-tile>
+
+        <mat-grid-tile>
+
+          
+        </mat-grid-tile>
       
        
       </mat-grid-list>
@@ -125,7 +130,11 @@
         <!--Mini Cards-->
         <mat-grid-tile *ngFor="let i of data" [colspan]="( cardLayout | async )?.miniCard?.cols"
           [rowspan]="( cardLayout | async )?.miniCard?.rows">
-          <app-minicard (click)='!(i.name === "OljeNiva")  || openChart(i.name)' [unit]="i.unit" [icon]="i.icon" [title]="i.name" [color]="i.color" [value]=i.value [edit]="editable" ><div></div></app-minicard>
+          <app-minicard (click)='!(i.name === "OljeNiva")  || openChart(i.name)' [unit]="i.unit" [icon]="i.icon" [title]="i.name" [color]="i.color" [value]=i.value [edit]="editable" ></app-minicard>
+        </mat-grid-tile>
+        <mat-grid-tile>
+
+          <app-gauge [type]="'semi'" [value]="data[2].value" [min]=0 [max]=900 [label]="'Oljenivå'" [unit] ="'mm'"></app-gauge>
         </mat-grid-tile>
       
        
