--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -144,10 +144,14 @@
 
 
      
+
+
+
+
   </mat-tab>
-
-  
-
+  <mat-tab label="Camera">
+    <app-camera-streamer></app-camera-streamer>
+</mat-tab>
 </mat-tab-group>
 </mat-dialog-content>
 
