--- a/src/app/components/camera-streamer/camera-streamer.component.html
+++ b/src/app/components/camera-streamer/camera-streamer.component.html
@@ -1,6 +1,9 @@
 <video>
-<source src="http://81.166.233.221:8080/mjpg/video.mjpg">
+<source src="http://213.184.198.246:8090/mjpg/video.mjpg">
 
 </video>
 
+<a rel="nofollow" href="http://213.184.198.246:8090/">  
 <img class="camera"  src="http://213.184.198.246:8090/mjpg/video.mjpg">
+
+</a>
