--- a/src/app/components/camera-streamer/camera-streamer.component.html
+++ b/src/app/components/camera-streamer/camera-streamer.component.html
@@ -1,9 +1,2 @@
-<video>
-<source src="http://213.184.198.246:8090/mjpg/video.mjpg">
 
-</video>
-
-<a rel="nofollow" href="http://213.184.198.246:8090/">  
-<img class="camera"  src="http://213.184.198.246:8090/mjpg/video.mjpg">
-
-</a>
+<img class="camera"  src="https://webkamera.atlas.vegvesen.no/public/kamera?id=1883060">
