--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -38,8 +38,9 @@ font-size: 10vw;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    color: #75787B;
+    font-family: "Verdana"
   }
-
 
   
   hr {
