--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
-
+@use '~@angular/material' as mat;
+@import '~@angular/material/theming';
+@include mat-core();
 html {
   height: 100%;
   box-sizing: border-box;
@@ -52,6 +54,22 @@ div.reading-block { overflow: visible; }
   opacity: 0.0
 }
 
+$angular-primary: mat.define-palette(mat.$teal-palette, 500, 100, 900);
+$angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+$angular-warn: mat.define-palette(mat.$red-palette);
+
+$angular-default-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $angular-primary,
+      accent: $angular-accent,
+      warn: $angular-warn,
+    ),
+  )
+);
+
+@include mat.all-component-themes($angular-default-theme);
 
 @keyframes pulsate {
   0% {
