--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,38 +1,6 @@
-
+@use '~@angular/material' as mat;
 @import '~@angular/material/theming';
 @include mat-core();
-$md-mdblue: (
-    50 : #e8f0f3,
-    100 : #c6dbe0,
-    200 : #a0c3cb,
-    300 : #79aab6,
-    400 : #5d98a7,
-    500 : #408697,
-    600 : #3a7e8f,
-    700 : #327384,
-    800 : #2a697a,
-    900 : #1c5669,
-    A100 : #a6e8ff,
-    A200 : #73daff,
-    A400 : #40cdff,
-    A700 : #26c7ff,
-    contrast: (
-        50 : #000000,
-        100 : #000000,
-        200 : #000000,
-        300 : #000000,
-        400 : #000000,
-        500 : #ffffff,
-        600 : #ffffff,
-        700 : #ffffff,
-        800 : #ffffff,
-        900 : #ffffff,
-        A100 : #000000,
-        A200 : #000000,
-        A400 : #000000,
-        A700 : #000000,
-    )
-);
 
 body {
     height: 100%;
@@ -45,26 +13,7 @@ body {
   }
 
 
-$inside-primary: mat-palette($mat-light-blue);
-$inside-accent: mat-palette($mat-light-blue);
-$inside-warn: mat-palette($mat-red);
-$inside-theme-dark: mat-dark-theme(
-  $inside-primary,
-  $inside-accent,
-  $inside-warn
-);
 
-
-$my-app-primary: mat-palette($mat-light-blue);
-$my-app-accent:  mat-palette($mat-pink, 500, 900, A100);
-$my-app-warn:    mat-palette($mat-deep-orange);
-$my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
-@include angular-material-theme($inside-theme-dark);
-.alternate-theme {
-  $alternate-primary: mat-palette($mat-light-blue);
-  $alternate-accent:  mat-palette($mat-yellow, 400);
-  $alternate-theme: mat-light-theme($alternate-primary, $alternate-accent);
-}
 
 .pulse {
   animation: pulsate 2s ease-out;
