--- a/src/app/components/loginform/loginform.component.html
+++ b/src/app/components/loginform/loginform.component.html
@@ -1,6 +1,9 @@
+<mat-card>
+
+    <mat-card-content>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" color="primary">
     <h1>Login</h1>
-    <p class="text-muted">Logg inn</p>
+    
     <div class="input-group mb-3">
     <div class="input-group-prepend">
         <span class="input-group-text"><mat-icon class="white-icon">person</mat-icon></span>
@@ -26,3 +29,5 @@
 
     </div>
     </form>
+</mat-card-content>
+</mat-card>
