--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -152,6 +152,14 @@
   <mat-tab label="Camera">
     <app-camera-streamer></app-camera-streamer>
 </mat-tab>
+
+
+
+<!-- <mat-tab label="HMI">
+  <button mat-button (click)="goToLink('http://sulesund-fk.ddns.net/webvisu')">Gå til HMI</button>
+</mat-tab> -->
+
+
 </mat-tab-group>
 </mat-dialog-content>
 
