--- a/src/app/components/maintencereport/maintencereport.component.html
+++ b/src/app/components/maintencereport/maintencereport.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary" (click)="addReport()">Legg til</button>
+<button type="button" class="btn btn-primary" (click)="openDialog('Add',{})">Legg til</button>
 
 <table mat-table [dataSource]="reports" class="mat-elevation-z8">
 
@@ -32,8 +32,8 @@
     <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
         <td mat-cell *matCellDef="let element"> 
-            <button type="button" class="btn btn-info btn-sm mr-2" (click)="editReport(element.id)">Endre</button> 
-            <button type="button" class="btn btn-danger btn-sm" (click)="deleteReport(element.id)">Slett</button>    
+            <button type="button" class="btn btn-info btn-sm mr-2" (click)="openDialog('Update',element)">Endre</button> 
+            <button type="button" class="btn btn-danger btn-sm" (click)="openDialog('Delete',element)">Slett</button>    
         </td>
       </ng-container>
   
