--- a/src/app/components/report-dialog/report-dialog.component.html
+++ b/src/app/components/report-dialog/report-dialog.component.html
@@ -1,14 +1,14 @@
-<h1 mat-dialog-title>Row Action :: <strong>{{action}}</strong></h1>
+<h1 mat-dialog-title><strong>{{action}}</strong></h1>
 <div mat-dialog-content>
   <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-    <input placeholder="{{action}} Navn" matInput [(ngModel)]="local_data.reportedBy">
+    <input placeholder="Rapportert av" matInput [(ngModel)]="local_data.reportedBy">
   </mat-form-field>
 
-  <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-    <input placeholder="{{action}} Forklaring" matInput [(ngModel)]="local_data.description">
+  <mat-form-field *ngIf="action != 'Delete'">
+    <input placeholder="Forklaring" matInput [(ngModel)]="local_data.description">
   </mat-form-field>
 
-  <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
+  <mat-form-field *ngIf="action != 'Delete'">
     <mat-label>Status</mat-label>
     <mat-select [(value)] ="local_data.status" >
         <mat-option value="done">Done</mat-option>
@@ -16,7 +16,7 @@
       </mat-select>
   </mat-form-field>
   <ng-template #elseTemplate>
-    Sure to delete <b>{{local_data.name}}</b>?
+    Sikker du vil slette <b>{{local_data.description}}</b>?
   </ng-template>
 </div>
 <div mat-dialog-actions>
