--- a/src/app/components/loginform/loginform.component.html
+++ b/src/app/components/loginform/loginform.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="row">
     <div class="col-6">
-    <button type="submit" class="btn btn-primary px-4">Logg inn</button>
+    <button mat-button mat-flat-button color="primary"  type="submit" >Logg inn</button>
     </div>
 
     </div>
