--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -10,14 +10,13 @@
     <div class="test"> 
         <div class="title" >
             <h1 (click)="scroll()">FERGEKAI</h1>
-          
           </div>
-   
+         
   <div class="hero-wrapper">
     <div class="hero">
         <figure>
 
-          <img src="assets/waves.png">
+          <img src="assets/start.jpg">
           
           <!-- <video loop="loop" muted="muted" autoplay="autoplay">
                 <source src="https://cdn.videvo.net/videvo_files/video/free/2013-09/large_watermarked/FerryComingtoDock1_1_preview.mp4" />
