--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -107,7 +107,7 @@ video {
     height: 30em;
    top: 50%;
    margin-top: 20%;
-   background: linear-gradient(to right, #30CFD0 0%, #0a5cd6 100%);
+   background: linear-gradient(to right, #2478f7 0%, #02193b 100%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
   cursor: pointer;
