--- a/src/app/components/maintencereport/maintencereport.component.css
+++ b/src/app/components/maintencereport/maintencereport.component.css
@@ -1,3 +1,25 @@
 table {
     width: 100%;
   }
+
+  .mobile-label {
+    display: none;
+  }
+  
+  @media(max-width: 600px) {
+    .mobile-label {
+      width: 80px;
+      display: inline-block;
+          font-weight: bold;
+    }
+  
+    .mat-header-row {
+      display: none;
+    }
+  
+    .mat-row { 
+      flex-direction: column;
+      align-items: start;
+      padding: 8px 24px;
+    }
+  }
