--- a/src/app/components/maintencereport/maintencereport.component.html
+++ b/src/app/components/maintencereport/maintencereport.component.html
@@ -1,45 +1,56 @@
 <button mat-button (click)="openDialog('Add',{})" color="primary">Legg til</button>
 
-<table mat-table [dataSource]="reports" class="mat-elevation-z8">
+<mat-table [dataSource]="reports"   class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
   
     <!-- Position Column -->
     <ng-container matColumnDef="Forklaring">
-      <th mat-header-cell *matHeaderCellDef> Forklaring </th>
-      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      <mat-header-cell *matHeaderCellDef>Forklaring </mat-header-cell>
+      <mat-cell *matCellDef="let element"> 
+        <span class="mobile-label">Forklaring:</span>
+        {{element.description}} 
+
+      </mat-cell>
     </ng-container>
   
     <!-- Name Column -->
     <ng-container matColumnDef="Rapportert av">
-      <th mat-header-cell *matHeaderCellDef> Rapportert av </th>
-      <td mat-cell *matCellDef="let element"> {{element.reportedBy}} </td>
+      <mat-header-cell *matHeaderCellDef> Rapportert av </mat-header-cell>
+      <mat-cell *matCellDef="let element"> 
+        <span class="mobile-label">Rapportert av:</span>
+        {{element.reportedBy}} </mat-cell>
     </ng-container>
   
     <!-- Weight Column -->
     <ng-container matColumnDef="Status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
-      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+      <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
+      <mat-cell *matCellDef="let element"> 
+        <span class="mobile-label">Status:</span>
+        
+        {{element.status}} </mat-cell>
     </ng-container>
   
     <!-- Symbol Column -->
     <ng-container matColumnDef="Dato">
-      <th mat-header-cell *matHeaderCellDef> Dato </th>
-      <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+      <mat-header-cell *matHeaderCellDef> Dato </mat-header-cell>
+      <mat-cell *matCellDef="let element"> 
+        <span class="mobile-label">Dato:</span>
+        {{element.date}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="Action">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let element"> 
+        <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
+        <mat-cell *matCellDef="let element"> 
             <button mat-button (click)="openDialog('Update',element)" mat-flat-button color="primary">Endre</button> 
             <button mat-button (click)="openDialog('Delete',element)" mat-flat-button color="warn">Slett</button>    
-        </td>
+        </mat-cell>
       </ng-container>
   
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
   
   
   
