preload login image

--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -16,7 +16,7 @@
     <div class="hero">
         <figure>
 
-          <img src="assets/start.jpg">
+          <img rel="preload" src="assets/start.jpg">
           
           <!-- <video loop="loop" muted="muted" autoplay="autoplay">
                 <source src="https://cdn.videvo.net/videvo_files/video/free/2013-09/large_watermarked/FerryComingtoDock1_1_preview.mp4" />
