--- a/src/styles.css
+++ b/src/styles.css
@@ -47,4 +47,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow: h
 .leaflet-boat-icon{
   width: 50px;
   height: 50px;
+  
+  }
+
+  .boats{
+
+    color: aqua;
   }
