--- a/src/app/dialogs/tiles/tiles.component.html
+++ b/src/app/dialogs/tiles/tiles.component.html
@@ -148,12 +148,14 @@
 
 
 
-
+    </mat-tab>
+    <mat-tab label="HMI">
+      <app-hmi [data]="data"></app-hmi>
   </mat-tab>
-  <mat-tab label="Camera">
+  
+  <mat-tab label="CCTV">
     <app-camera-streamer></app-camera-streamer>
-</mat-tab>
-
+  </mat-tab>
 
 
 <!-- <mat-tab label="HMI">
